see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2007-11-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------

* fixed asc2g bug on Windows that caused a crash on exit - Bob Parker
* fixed bugs in several Utah Raster Toolkit tools - Pedro Giffuni
* fixed mged start-up initialization bug on Windows - Daniel Roßberg
* graceful handling of mesh normal failures - Sean Morrison
* fixed variety of g-iges and other exporter crashes - Sean Morrison
* fixed crash-on-exit cleanup bug in g-off exporter - Sean Morrison
* fixed crash when xpush was called on a primitive - Erik Greenwald
* fixed Windows port 'opendb' command crash - Bob Parker
* added configurable max_dist depth option to rtedge - Erik Greenwald
* added rest of BRL-CAD's ray-tracers to the Windows port - Bob Parker
* enabled embedded framebuffer support in Windows port - Bob Parker
* fixed garbled output during parallel crash reports - Sean Morrison
* fixed memory deallocation bug in the raytracers - Bob Parker
* renamed 'hd' hexadecimal dump utility to 'hex' - Sean Morrison
* renamed procedural 'wall' generator to 'masonry' - Sean Morrison 
* mged 'tol' command now accepts multiple tolerances - Sean Morrison
* TCL and TK updated to 8.5b1. itcl/itk to dev 3.4. - Erik Greenwald
* fixed non-normalized vector bugs with ARBN objects - John Anderson
* pix-png warns if PNG is smaller than the PIX input - Sean Morrison
* new tgf-g INTAVAL importer - TNO PML, IABG mbH
* removed longjmp warning message from applications - Sean Morrison
* upgraded bundled incrTcl to version 3.3 - Erik Greenwald
* fixed bug with -g/-G cell size options to rt - John Anderson
* 'tree' command without args now shows e'd objects - Sean Morrison
* new pix-fb -p option to pause before exiting - Karel Kulhavy